--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>Domain name Generator</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
@@ -13,6 +13,6 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <p id="#domains"></p>
+    <p id="domains"></p>
   </body>
 </html>
